--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $outline-size: .75px;
 $outline-color: darken(#30466E, 10%);
 $cover-size: 2.85em;
 $image-spacing: $cover-size * 0.2;
+$logo-image-width: 14rem;
 $transition-delay: .05s;
 $base-font: 'Kalam', cursive;
 $special-font: 'Teko', sans-serif;
