--- a/src/scss/modules/AppBackground.module.scss
+++ b/src/scss/modules/AppBackground.module.scss
@@ -1,3 +1,5 @@
+@use "../mixins";
+
 .background {
   position: fixed;
   top: 0;
@@ -5,7 +7,7 @@
   right: 0;
   bottom: 0;
   z-index: -1;
-  background: #000 url('../../img/transparency.svg') repeat;
-  background-size: 32px;
   cursor: pointer;
+
+  @include mixins.checker-background;
 }
